# template-python-mcp-server

./: .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.py
.github/: copilot-instructions.md
.github/workflows/: docker-build-push.yml
src/: __init__.py  config.py  server.py
