[project]
name = "TODO-TEMPLATE-mcp-server"
version = "0.1.0"
description = "TODO-TEMPLATE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastmcp>=2.8.1", "uvicorn>=0.34.3", "structlog>=25.4.0"]

[tool.ruff]
line-length = 120
target-version = "py311"
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
